crates/cli/tests/snapshots/run_node_test__yarn1__installs_correct_version.snap
---
source: crates/cli/tests/run_node_test.rs
assertion_line: 734
expression: get_assert_output(&assert)
---
▪▪▪▪ yarn install
▪▪▪▪ yarn dedupe
▪▪▪▪ yarn:version
1.22.0

Tasks: 1 completed
 Time: 100ms



